--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <li class="nav__item">
         <h1 class="nav__heading">
-          <a href="#about" class="nav__link">Spaceweb</a>
+          <a href="#top" class="nav__link">Spaceweb</a>
         </h1>
       </li>
 
@@ -71,9 +71,9 @@
     </ul>
   </section>
 
-  <header id="about" class="header">
+  <header id="top" class="header">
 
-    <h3 class="heading-3 heading-3--header">Spaceweb</h3>
+    <h3 id="about" class="heading-3 heading-3--header">Spaceweb</h3>
 
     <h4 class="heading-4 heading-4--header">Web site design template</h4>
 
@@ -81,7 +81,7 @@
 
   </header>
 
-  <nav id="about" class="header-crud">
+  <nav class="header-crud">
 
     <ul class="header-crud__list">
 
@@ -115,9 +115,9 @@
     </form>
   </nav>
 
-  <section class="story">
+  <section id="products" class="story">
 
-    <div id="products" class="story__content">
+    <div class="story__content">
 
       <h5 class="heading-5 heading-5--green heading-5--story">
         Space websites
@@ -144,9 +144,9 @@
 
   <section class="features__1"></section>
 
-  <section class="features__2">   
+  <section id="portfolio" class="features__2">   
 
-    <div id="portfolio" class="features__content">
+    <div class="features__content">
 
       <div class="features__box-icon features__box-icon--1">
         <svg class="features__icon features__icon--1">
