--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        If you like this project please contact me via social media for cooperation. You can download my CV as well. Hope to work together!
+        Check out promo CREATE and READ page! Currently working on UPDATE and DELETE pages.
       </p>
     </div>
     
@@ -198,7 +198,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        If you like this project please contact me via social media for cooperation. You can download my CV as well. Hope to work together!
+        MVC Object-oriented programming (OOP) PHP version is currently building as well.
       </p>
     </div>
   </section>
