--- a/read-page.html
+++ b/read-page.html
@@ -276,7 +276,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        If you like this project please contact me via social media for cooperation. You can download my CV as well. Hope to work together!
+        Did you like READ page? Check out promo CREATE page! Currently working on UPDATE and DELETE pages.
       </p>
     </div>      
 
@@ -310,7 +310,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        If you like this project please contact me via social media for cooperation. You can download my CV as well. Hope to work together!
+        MVC Object-oriented programming (OOP) PHP version is currently building as well.
       </p>
 
     </div>
