--- a/create-page.html
+++ b/create-page.html
@@ -234,7 +234,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        If you like this project please contact me via social media for cooperation. You can download my CV as well. Hope to work together!
+        Did you like CREATE page? Check out promo READ page! Currently working on UPDATE and DELETE pages.
       </p>
     </div>
     
@@ -272,7 +272,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        If you like this project please contact me via social media for cooperation. You can download my CV as well. Hope to work together!
+        MVC Object-oriented programming (OOP) PHP version is currently building as well.
       </p>
     </div>
   </section>
