--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        Check out promo CREATE and READ page! Currently working on UPDATE and DELETE pages.
+        Check out promo CREATE and READ pages! Currently working on UPDATE and DELETE pages.
       </p>
     </div>
     
