--- a/read-page.html
+++ b/read-page.html
@@ -147,6 +147,10 @@
       <option class="form-create-page__option">User Full Name</option>
   
       <option class="form-create-page__option">
+        Milos Cemalovic
+      </option>
+  
+      <option class="form-create-page__option">
         Please insert database to see output
       </option>
     
@@ -154,6 +158,10 @@
   
     <select class="form-create-page__select" name="opinion">
       <option class="form-create-page__option">User Email</option>
+  
+      <option class="form-create-page__option">
+        miloscemalovicnew@gmail.com
+      </option>
   
       <option class="form-create-page__option">
         Please insert database to see output
@@ -165,6 +173,10 @@
       <option class="form-create-page__option">User Phone</option>
   
       <option class="form-create-page__option">
+        +38162327929
+      </option>
+  
+      <option class="form-create-page__option">
         Please insert database to see output
       </option>
   
@@ -172,6 +184,10 @@
     
     <select class="form-create-page__select" name="opinion">
       <option class="form-create-page__option">User Letter</option>
+  
+      <option class="form-create-page__option">
+        This is impressive! Come work with me!
+      </option>
   
       <option class="form-create-page__option">
         Please insert database to see output
