--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <h4 class="heading-4 heading-4--header">Web site design template</h4>
 
-    <button class="btn btn--header">Read more</button>
+    <a href="#products" class="btn btn--header">Try it</a>
 
   </header>
 
