--- a/read-page.html
+++ b/read-page.html
@@ -269,7 +269,7 @@
   
     <textarea class="form-create-page__textarea" name="letter" id="letter" cols="50" rows="10" placeholder="Please enter your message"></textarea>
   
-    <button type="submit" class="btn btn--form-create-page" name="page" value="#">Submit</button>
+    <button class="btn btn--form-create-page" name="page" value="#">Submit</button>
   
     <!-- <h4 class="heading-4 heading-4--header" style="grid-column:1/-1;"> <?php if(isset($msg)) echo $msg ?> </h4> -->
   
