--- a/create-page.html
+++ b/create-page.html
@@ -208,7 +208,7 @@
 
     <textarea class="form-create-page__textarea" name="" id="" cols="30" rows="10" placeholder="Please enter your message"></textarea>
 
-    <butoon class="btn btn--form-create-page" name="page" value="form-create-page">Submit</butoon>
+    <a class="btn btn--form-create-page" name="page" value="form-create-page">Submit</a>
     
     <h4 id="downloads" class="heading-4 heading-4--green heading-4--create-page" style="grid-column:1/-1;">
       <a class="heading-4 heading-4--green heading-4--create-page" href="read-page.html">Check out outputs</a>
