--- a/create-page.html
+++ b/create-page.html
@@ -94,11 +94,11 @@
       </li>
 
       <li class="header-crud__item">
-        <a href="" class="header-crud__link">Update</a>
+        <a href="#" class="header-crud__link">Update</a>
       </li>
 
       <li class="header-crud__item">
-        <a href="" class="header-crud__link">Delete</a>
+        <a href="delete-page.html" class="header-crud__link">Delete</a>
       </li>
     </ul>
 
@@ -234,7 +234,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        Did you like CREATE page? Check out promo READ page! Currently working on UPDATE and DELETE pages.
+        Did you like CREATE page? Check out promo READ and DELETE pages! Currently working on UPDATE page.
       </p>
     </div>
     
