--- a/read-page.html
+++ b/read-page.html
@@ -268,7 +268,7 @@
     </div>
     
     <h4 id="downloads" class="heading-4 heading-4--green heading-4--create-page" style="grid-column:1/-1;">
-      <a class="heading-4 heading-4--green heading-4--create-page" href="create-page.html">Create more inputs</a>
+      <a class="heading-4 heading-4--green heading-4--create-page" href="update-page.html">Update users</a>
     </h4>
     
     <h5 class="heading-5 heading-5--green heading-5--create-page">
