--- a/update-page.html
+++ b/update-page.html
@@ -186,7 +186,7 @@
     <a class="btn btn--form-create-page" name="page" value="#">Update</a>
     
     <h4 id="downloads" class="heading-4 heading-4--green heading-4--create-page" style="grid-column:1/-1;">
-      <a class="heading-4 heading-4--green heading-4--create-page" href="create-page.html">Create more inputs</a>
+      <a class="heading-4 heading-4--green heading-4--create-page" href="delete-page.html">Delete users</a>
     </h4>
   
   </form>
