--- a/create-page.html
+++ b/create-page.html
@@ -358,11 +358,11 @@
         </svg>
         <h6 class="heading-6 heading-6--footer">Contact</h6>
       </a>
-      <a href="https://www.linkedin.com/in/milo%C5%A1-%C4%87emalovi%C4%87-3a54423/" target="_blanc" class="footer__link">
+      <a href="update-page.html" class="footer__link">
         <svg class="footer__nav-icon">
           <use xlink:href="img/sprite.svg#icon-create"></use>
         </svg>
-        <h6 class="heading-6 heading-6--footer">Articles</h6>
+        <h6 class="heading-6 heading-6--footer">Update page</h6>
       </a>
     </div>      
 
@@ -385,7 +385,7 @@
         </svg>
         <h6 class="heading-6 heading-6--footer">Dashboard</h6>
       </a>
-      <a href="#" class="footer__link">
+      <a href="index.html" class="footer__link">
         <svg class="footer__nav-icon">
           <use xlink:href="img/sprite.svg#icon-key"></use>
         </svg>
