--- a/create-page.html
+++ b/create-page.html
@@ -206,11 +206,11 @@
       Your message for me
     </h5>
 
-    <textarea class="form-create-page__textarea" name="" id="" cols="40" rows="10" placeholder="Please enter your message"></textarea>
+    <textarea class="form-create-page__textarea" name="" id="" placeholder="Please enter your message"></textarea>
 
     <a class="btn btn--form-create-page" name="page" value="form-create-page">Submit</a>
     
-    <h4 id="downloads" class="heading-4 heading-4--green heading-4--create-page" style="grid-column:1/-1;">
+    <h4 id="downloads" class="heading-4 heading-4--green heading-4--create-page">
       <a class="heading-4 heading-4--green heading-4--create-page" href="read-page.html">Check out outputs</a>
     </h4>
 
@@ -319,23 +319,23 @@
         </svg>
         <h6 class="heading-6 heading-6--footer">Main page</h6>
       </a>
-      <a href="https://github.com/MilosCemalovic" target="_blanc" class="footer__link">
+      <a href="read-page.html" class="footer__link">
         <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-basket"></use>
+          <use xlink:href="img/sprite.svg#icon-create"></use>
         </svg>
-        <h6 class="heading-6 heading-6--footer">Products</h6>
+        <h6 class="heading-6 heading-6--footer">Read page</h6>
+      </a>
+      <a href="img/CV_MilosCemalovic.pdf" target="_blanc" class="footer__link">
+        <svg class="footer__nav-icon">
+          <use xlink:href="img/sprite.svg#icon-envelope"></use>
+        </svg>
+        <h6 class="heading-6 heading-6--footer">Contact</h6>
       </a>
       <a href="img/CV_MilosCemalovic.pdf" download class="footer__link">
         <svg class="footer__nav-icon">
           <use xlink:href="img/sprite.svg#icon-download"></use>
         </svg>
         <h6 class="heading-6 heading-6--footer">Download CV</h6>
-      </a>
-      <a  href="https://www.linkedin.com/in/milo%C5%A1-%C4%87emalovi%C4%87-3a54423/" target="_blanc" class="footer__link">
-        <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-newspaper"></use>
-        </svg>
-        <h6 class="heading-6 heading-6--footer">News</h6>
       </a>
     </div>      
 
@@ -352,19 +352,19 @@
         </svg>
         <h6 class="heading-6 heading-6--footer">About</h6>
       </a>
-      <a href="img/CV_MilosCemalovic.pdf" target="_blanc" class="footer__link">
+      <a href="https://github.com/MilosCemalovic" target="_blanc" class="footer__link">
         <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-envelope"></use>
+          <use xlink:href="img/sprite.svg#icon-basket"></use>
         </svg>
-        <h6 class="heading-6 heading-6--footer">Contact</h6>
+        <h6 class="heading-6 heading-6--footer">Products</h6>
       </a>
-      <a href="update-page.html" class="footer__link">
+      <a  href="https://www.linkedin.com/in/milo%C5%A1-%C4%87emalovi%C4%87-3a54423/" target="_blanc" class="footer__link">
         <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-create"></use>
+          <use xlink:href="img/sprite.svg#icon-newspaper"></use>
         </svg>
-        <h6 class="heading-6 heading-6--footer">Update page</h6>
+        <h6 class="heading-6 heading-6--footer">News</h6>
       </a>
-    </div>      
+    </div>     
 
     <div class="footer__content">
       <a href="#top" class="footer__link">
