--- a/delete-page.html
+++ b/delete-page.html
@@ -203,7 +203,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        Did you like DELETE page? Check out promo CREATE and READ pages! Currently working on UPDATE page.
+        Did you like DELETE page? Check out promo CREATE, READ and UPDATE pages!
       </p>
     </div>
     
