--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
       <li class="nav__item">
         <h1 class="nav__heading">
-          <a href="#top" class="nav__link">Spaceweb</a>
+          <a href="index.html" class="nav__link">Spaceweb</a>
         </h1>
       </li>
 
       <li class="nav__item">
         <h2 class="nav__heading">
-          <a href="#products" class="nav__link">Products</a>
+          <a href="#top" class="nav__link">Top</a>
         </h2>
       </li>
 
@@ -58,7 +58,7 @@
 
       <li class="nav__item">
         <h2 class="nav__heading">
-          <a href="#about" class="nav__link">About us</a>
+          <a href="#contact" class="nav__link">About us</a>
         </h2>
       </li>
 
