--- a/create-page.html
+++ b/create-page.html
@@ -40,7 +40,7 @@
 
       <li class="nav__item">
         <h2 class="nav__heading">
-          <a href="#products" class="nav__link">Products</a>
+          <a href="#top" class="nav__link">Top</a>
         </h2>
       </li>
 
@@ -58,7 +58,7 @@
 
       <li class="nav__item">
         <h2 class="nav__heading">
-          <a href="#about" class="nav__link">About us</a>
+          <a href="#contact" class="nav__link">About us</a>
         </h2>
       </li>
 
