--- a/delete-page.html
+++ b/delete-page.html
@@ -40,7 +40,7 @@
 
       <li class="nav__item">
         <h2 class="nav__heading">
-          <a href="#products" class="nav__link">Products</a>
+          <a href="#top" class="nav__link">Top</a>
         </h2>
       </li>
 
@@ -58,7 +58,7 @@
 
       <li class="nav__item">
         <h2 class="nav__heading">
-          <a href="#about" class="nav__link">About us</a>
+          <a href="#contact" class="nav__link">About us</a>
         </h2>
       </li>
 
@@ -176,12 +176,8 @@
     </h4>
   
     <h5 class="heading-5 heading-5--green heading-5--create-page">
-      Your message for me
+      Hope you like this project!
     </h5>
-  
-    <textarea class="form-create-page__textarea" name="letter" id="letter" placeholder="Please enter your message"></textarea>
-  
-    <a class="btn btn--form-create-page" name="page" value="#">Submit</a>
   
   </form>
 
