--- a/delete-page.html
+++ b/delete-page.html
@@ -187,8 +187,8 @@
 
     <div class="features__content">
 
-      <div class="features__box-icon features__box-icon--1">
-        <svg class="features__icon features__icon--1">
+      <div class="features__box-icon features__box-icon--1 slide-in on-off">
+        <svg class="features__icon features__icon--1 slide-in on-off">
           <use xlink:href="img/sprite.svg#icon-lightbulb"></use>
         </svg>
       </div>
@@ -206,11 +206,11 @@
 
     <div class="features__content">
 
-     <div class="features__box-icon features__box-icon--2">
-        <svg class="features__icon features__icon--2">
-          <use xlink:href="img/sprite.svg#icon-rocket"></use>
-        </svg>
-     </div>
+      <div class="features__box-icon features__box-icon--2">
+         <svg class="features__icon features__icon--2 slide-in from-down">
+           <use xlink:href="img/sprite.svg#icon-rocket"></use>
+         </svg>
+      </div>
       
 
       <h5 class="heading-5 heading-5--white heading-5--features">
@@ -225,7 +225,7 @@
 
     <div class="features__content">
 
-      <div class="features__box-icon features__box-icon--3">
+      <div class="features__box-icon features__box-icon--3 slide-in from-right">
         <svg class="features__icon features__icon--3">
           <use xlink:href="img/sprite.svg#icon-presentation"></use>
         </svg>
