--- a/create-page.html
+++ b/create-page.html
@@ -218,7 +218,7 @@
 
   <section class="features__1 features__1--create-page"></section>
 
-  <section id="portfolio" class="features__2">   
+  <section id="portfolio" class="features__2 features__2--create-page">   
 
     <div class="features__content">
 
@@ -277,7 +277,7 @@
     </div>
   </section>
 
-  <footer id="contact" class="footer__1"></footer>
+  <footer id="contact" class="footer__1 footer__1--create-page"></footer>
 
   <footer class="footer__2 footer__2--create-page">
 
