--- a/read-page.html
+++ b/read-page.html
@@ -325,7 +325,7 @@
     </div>
   </section>
 
-  <footer id="contact" class="footer__1"></footer>
+  <footer id="contact" class="footer__1 footer__1--create-page"></footer>
 
   <footer class="footer__2 footer__2--create-page">
 
