--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <li class="nav__item">
         <h2 class="nav__heading">
-          <a href="#portfolio" class="nav__link">Portfolio</a>
+          <a href="#portfolio" class="nav__link">Team Moto</a>
         </h2>
       </li>
 
@@ -160,7 +160,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        Check out promo CREATE, READ, UPDATE and DELETE pages!
+        Did you see CREATE, READ, UPDATE and DELETE pages? Let's Go!
       </p>
     </div>
     
@@ -179,7 +179,8 @@
       </h5>
 
       <p class="par par--white par--features">
-        If you like this project please contact me via social media for cooperation. You can download my CV as well. Hope to work together!
+        I hope you like this project! 
+        You can download my CV and contact me.
       </p>
     </div>
     
@@ -198,7 +199,7 @@
       </h5>
 
       <p class="par par--white par--features">
-        MVC Object-oriented programming (OOP) PHP version is currently building as well.
+        Check out MVC Object-oriented programming (OOP) PHP version on my GitHub profile.
       </p>
     </div>
   </section>
@@ -245,13 +246,13 @@
         </svg>
         <h6 class="heading-6 heading-6--footer">Main page</h6>
       </a>
-      <a href="create-page.html" class="footer__link">
+      <a href="https://miloscemalovic.github.io/cemalovic-cv/" target="_blanc" class="footer__link">
         <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-create"></use>
+          <use xlink:href="img/sprite.svg#icon-suitcase"></use>
         </svg>
-        <h6 class="heading-6 heading-6--footer">Create page</h6>
+        <h6 class="heading-6 heading-6--footer">Portfolio</h6>
       </a>
-      <a href="img/CV_MilosCemalovic.pdf" target="_blanc" class="footer__link">
+      <a href="https://www.linkedin.com/in/milo%C5%A1-%C4%87emalovi%C4%87-3a54423/" target="_blanc" class="footer__link">
         <svg class="footer__nav-icon">
           <use xlink:href="img/sprite.svg#icon-envelope"></use>
         </svg>
@@ -266,29 +267,29 @@
     </div>      
 
     <div class="footer__content">
-      <a href="img/CV_MilosCemalovic.pdf" target="_blanc" class="footer__link">
+      <a href="create-page.html" class="footer__link">
         <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-suitcase"></use>
+          <use xlink:href="img/sprite.svg#icon-create"></use>
         </svg>
-        <h6 class="heading-6 heading-6--footer">Portfolio</h6>
+        <h6 class="heading-6 heading-6--footer">Create page</h6>
       </a>
-      <a href="https://www.linkedin.com/in/milo%C5%A1-%C4%87emalovi%C4%87-3a54423/" target="_blanc" class="footer__link">
-        <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-info"></use>
-        </svg>
-        <h6 class="heading-6 heading-6--footer">About</h6>
-      </a>
-      <a href="https://github.com/MilosCemalovic" target="_blanc" class="footer__link">
-        <svg class="footer__nav-icon">
-          <use xlink:href="img/sprite.svg#icon-basket"></use>
-        </svg>
-        <h6 class="heading-6 heading-6--footer">Products</h6>
-      </a>
-      <a  href="https://www.linkedin.com/in/milo%C5%A1-%C4%87emalovi%C4%87-3a54423/" target="_blanc" class="footer__link">
+      <a href="read-page.html" class="footer__link">
         <svg class="footer__nav-icon">
           <use xlink:href="img/sprite.svg#icon-newspaper"></use>
         </svg>
-        <h6 class="heading-6 heading-6--footer">News</h6>
+        <h6 class="heading-6 heading-6--footer">Read page</h6>
+      </a>
+      <a href="update-page.html" class="footer__link">
+        <svg class="footer__nav-icon">
+          <use xlink:href="img/sprite.svg#icon-basket"></use>
+        </svg>
+        <h6 class="heading-6 heading-6--footer">Update page</h6>
+      </a>
+      <a href="delete-page.html" class="footer__link">
+        <svg class="footer__nav-icon">
+          <use xlink:href="img/sprite.svg#icon-info"></use>
+        </svg>
+        <h6 class="heading-6 heading-6--footer">Delete page</h6>
       </a>
     </div>    
 
